<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/grey_stone_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/first_input_text_view"
            style="@style/CalculatorTextView" />

        <TextView
            android:id="@+id/operation_input_text_view"
            style="@style/CalculatorTextView"
            />

        <TextView
            android:id="@+id/second_input_text_view"
            style="@style/CalculatorTextView" />

        <TextView
            android:id="@+id/result_input_text_view"
            style="@style/CalculatorTextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tap_button"
                style="@style/CalculatorButton.Operation"
                android:text="@string/clickable_result" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reset_button"
                style="@style/CalculatorButton.Operation"
                android:text="@string/button_reset" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backspace_button"
                style="@style/CalculatorButton.Operation"
                android:text="@string/button_backspace" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divide_button"
                style="@style/CalculatorButton.Operation"
                android:text="@string/divide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/CalculatorButton.Number"
                android:text="@string/button_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/CalculatorButton.Number"
                android:text="@string/button_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/CalculatorButton.Number"
                android:text="@string/button_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply_button"
                style="@style/CalculatorButton.Operation"
                android:text="@string/multiply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/CalculatorButton.Number"
                android:text="@string/button_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/CalculatorButton.Number"
                android:text="@string/button_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/CalculatorButton.Number"
                android:text="@string/button_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus_button"
                style="@style/CalculatorButton.Operation"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/CalculatorButton.Number"
                android:text="@string/button_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/CalculatorButton.Number"
                android:text="@string/button_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/CalculatorButton.Number"
                android:text="@string/button_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus_button"
                style="@style/CalculatorButton.Operation"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/CalculatorButton.Number"
                android:text="@string/button_0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/point_button"
                style="@style/CalculatorButton.Operation"
                android:text="@string/point" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus_minus_button"
                style="@style/CalculatorButton.Operation"
                android:text="@string/plus_minus" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/result_button"
                style="@style/CalculatorButton.Operation"
                android:text="@string/equals" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>